force-app/main/default/objects/BMCServiceDesk__ContentImport__c/BMCServiceDesk__ContentImport__c.object-meta.xml
<CustomObject>
    <description>This object stores all the content management tile import information, such as File name, Import Date, Import logs (attachment), Scan logs(attachment) etc</description>
    <label>Content Import</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Content Import Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Content Import</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>