force-app/main/default/objects/BMCServiceDesk__ContentImport__c/fields/BMCServiceDesk__ContentVersion__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ContentVersion__c</fullName>
    <description>Version of content that is imported</description>
    <label>Content Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>