force-app/main/default/objects/BMCServiceDesk__ContentImport__c/fields/BMCServiceDesk__DeploymentDate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__DeploymentDate__c</fullName>
    <description>Date and time when imported records were deployed</description>
    <label>Deployment Date</label>
    <type>DateTime</type>
</CustomField>