force-app/main/default/objects/BMCServiceDesk__ContentImport__c/fields/BMCServiceDesk__FileName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FileName__c</fullName>
    <description>Name of the static resource that stores the imported data</description>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>