force-app/main/default/objects/BMCServiceDesk__ContentImport__c/fields/BMCServiceDesk__FKInitiator__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKInitiator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who is importing data</description>
    <label>Initiator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ContentImport</relationshipName>
    <type>Lookup</type>
</CustomField>