force-app/main/default/objects/BMCServiceDesk__ContentImport__c/fields/BMCServiceDesk__ImportDate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ImportDate__c</fullName>
    <description>Date and time when import was completed</description>
    <label>Import Date</label>
    <type>DateTime</type>
</CustomField>