force-app/main/default/objects/BMCServiceDesk__ContentImport__c/fields/BMCServiceDesk__RemedyforceVersion__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__RemedyforceVersion__c</fullName>
    <description>Lowest BMC Remedyforce version that is required to import the content</description>
    <label>Remedyforce Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>