force-app/main/default/objects/BMCServiceDesk__ContentImport__c/fields/BMCServiceDesk__ScanDate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ScanDate__c</fullName>
    <description>Date and time when scan was completed</description>
    <label>Scan Date</label>
    <type>DateTime</type>
</CustomField>