force-app/main/default/objects/BMCServiceDesk__ContentImport__c/fields/BMCServiceDesk__Status__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Status__c</fullName>
    <description>The following values are available:
            Initiated
            Scan Failed
            Scan Completed
            Import successful
            Import failed
            Deployed</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Scan Failed</fullName>
            </value>
            <value>
                <fullName>Scan Completed</fullName>
            </value>
            <value>
                <fullName>Import failed</fullName>
            </value>
            <value>
                <fullName>Import Successful</fullName>
            </value>
            <value>
                <fullName>Deployed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>