force-app/main/default/objects/BMCServiceDesk__ContentImport__c/fields/BMCServiceDesk__Summary__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Summary__c</fullName>
    <description>Summary of status change of each record</description>
    <label>Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>