force-app/main/default/objects/BMCServiceDesk__ContentImport__c/listViews/BMCServiceDesk__All.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All</fullName>
    <columns>NAME</columns>
    <columns>BMCServiceDesk__FileName__c</columns>
    <columns>BMCServiceDesk__ContentVersion__c</columns>
    <columns>BMCServiceDesk__FKInitiator__c</columns>
    <columns>BMCServiceDesk__Status__c</columns>
    <columns>BMCServiceDesk__RemedyforceVersion__c</columns>
    <columns>BMCServiceDesk__Summary__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>